<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginBottom="@dimen/dimens_24dp"
            android:gravity="center"
            android:text="@string/wifi_config_title"
            android:textColor="@color/color_home_title_tab"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/xzwifi_ic_attention"
            android:drawablePadding="@dimen/dimens_8dp"
            android:text="@string/wifi_config_5g_hint"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_12sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etWifiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:layout_marginBottom="@dimen/dimens_16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@mipmap/xzwifi_ic_wifi"
            android:drawablePadding="@dimen/dimens_16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:textAlignment="viewStart" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etWifiKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dimens_24dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/dimens_24dp"
                android:layout_marginBottom="@dimen/dimens_16dp"
                android:drawableStart="@mipmap/xzwifi_ic_password"
                android:drawablePadding="@dimen/dimens_16dp"
                android:hint="@string/wifi_config_key_hint"
                android:maxLines="1"
                android:text=""
                android:textAlignment="viewStart" />

            <ImageView
                android:id="@+id/ivShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/dimens_8dp"
                android:layout_marginTop="@dimen/dimens_12dp"
                android:layout_marginEnd="@dimen/dimens_36dp"
                android:layout_marginBottom="@dimen/dimens_8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/xzwifi_ic_undisplay" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_12dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/dimens_12dp"
            android:layout_marginBottom="@dimen/dimens_2dp"
            android:clickable="true"
            android:drawableStart="@mipmap/xzwifi_ic_qhwifi"
            android:drawablePadding="@dimen/dimens_12dp"
            android:focusable="true"
            android:text="@string/wifi_config_other"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_sp14" />

        <Button
            android:id="@+id/tvNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginBottom="@dimen/dimens_16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="@dimen/dimens_20dp"
            android:paddingBottom="@dimen/dimens_20dp"
            android:text="@string/select_device_type_next"
            android:textSize="@dimen/text_18sp" />

    </LinearLayout>

</RelativeLayout>